2011-11-12  Richard Henderson  <rth@redhat.com>

	* config/rs6000/rs6000.md (fix_trunc<SFDF>si2_stfiwx): Use 
	nonimmediate_operand for the destination.
	(fixuns_trunc<SFDF>si2_stfiwx): Likewise.

	* builtins.c (expand_builtin_compare_and_swap): If target is const0,
	don't pass the target to expand_atomic_compare_and_swap.
	(expand_builtin_atomic_compare_exchange): Likewise.

	* config/sh/linux.h (TARGET_INIT_LIBFUNCS): New.
	* config/sh/sh.c (sh_init_sync_libfuncs): New.

	* config/pa/pa-linux.h (TARGET_SYNC_LIBCALL): New.
	* config/pa/pa.h (TARGET_SYNC_LIBCALL): New default.
	* config/pa/pa.c (pa_init_libfuncs): Use init_sync_libfuncs.

2011-11-12  Iain Sandoe  <iains@gcc.gnu.org>

	PR target/45233
	* config/rs6000/rs6000.c (rs6000_legitimize_reload_address):
	Only expand a symbol ref. into an access when the entity is defined
	in the TU.

2011-11-12  Jan Hubicka  <jh@suse.cz>

	PR bootstrap/50822
	* cgraphunit.c (output_weakrefs): Output really only weakrefs.

2011-11-12  Nathan Sidwell  <nathan@acm.org>

	* gcov.c (struct name_map): New.
	(names, n_names, a_names): New global vars.
	(print_usage): Adjust usage.
	(generate_results): Canonicalize main file name.
	(release_structures): Adjust.
	(name_search, name_sort): New callbacks.
	(find_source): Look for and create a canonical name.
	(canonicalize_name): New.
	(make_gcov_file_name): Reimplement and fix mangling.
	(mangle_name): New.
	* doc/gcov.texi: Update documentation about path preservation.

2011-11-11  David S. Miller  <davem@davemloft.net>

	* config/sparc/linux.h (ASM_GENERATE_INTERNAL_LABEL): Delete.
	* config/sparc/linux64.h (ASM_GENERATE_INTERNAL_LABEL): Delete.

2011-11-11  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386-protos.h (ix86_maybe_emit_epilogue_vzeroupper):
	New prototype.
	* config/i386/i386.c (ix86_maybe_emit_epilogue_vzeroupper): New
	function.
	(ix86_expand_epilogue): Use it.
	* config/i386/i386.md (return, simple_return): Call it in the
	expanders.
