@@ -1,3 +1,10 @@
+2011-11-12  Dimitrios Apostolou  <jimis@gmx.net>
+
+	PR bootstrap/51094
+	* gcc/configure.ac: Check for stpcpy declaration.
+	* system.h: Declare it if not.
+	* config.in, configure: Regenerate.
+
 2011-11-12  Richard Henderson  <rth@redhat.com>
 
 	* config/rs6000/rs6000.md (fix_trunc<SFDF>si2_stfiwx): Use 
